# DevEnv

./: .vimrc  README  README.md  build.sh  cscope_maps.vim  git_upgrade_for_cent6.sh  gitconfig  glibc_2.14_for_ms.sh  mkcscope  nmon_install.sh  tmax_bashrc  tmux.conf  vimrc
centos/: tmux_install_in_centos.sh
centos/nmon/: nmon-16g-3.el6.x86_64.rpm
cmake_example/: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake_example/example/: CMakeLists.txt
server/: apply_https.md  nginx_example.conf
